# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  REPORT.md
.github/workflows/: blank.yml  ci.yml  cpack.yml
banking/: .gitignore  CMakeLists.txt  README.md  main.cpp
banking/.github/workflows/: ci.yml
banking/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
banking/coverage_report/include/: Account.hpp.func-c.html  Account.hpp.func.html  Account.hpp.gcov.html  index.html
banking/coverage_report/src/: Account.cpp.func-c.html  Account.cpp.func.html  Account.cpp.gcov.html  Transaction.cpp.func-c.html  Transaction.cpp.func.html  Transaction.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
banking/include/: Account.hpp  Transaction.hpp
banking/src/: Account.cpp  Transaction.cpp
banking/tests/: mock_account.hpp  test_account.cpp  test_transaction.cpp
